nenolod     2007/04/02 14:41:59 UTC	(20070402-8065)
  Log:
  - modified %s -> modified %s ago
  

  Changes:	Modified:
  +3 -3		trunk/modules/chanserv/akick.c (File Modified) 
  +2 -2		trunk/modules/chanserv/flags.c (File Modified) 


nenolod     2007/04/02 14:39:56 UTC	(20070402-8063)
  Log:
  - remove duplicate newlines
  

  Changes:	Modified:
  +2 -2		trunk/src/logger.c (File Modified) 


nenolod     2007/04/02 14:38:31 UTC	(20070402-8061)
  Log:
  - fix a logging issue where the inverse targets are being logged
  

  Changes:	Modified:
  +1 -1		trunk/src/logger.c (File Modified) 


nenolod     2007/04/02 14:28:15 UTC	(20070402-8059)
  Log:
  - show last modified time
  

  Changes:	Modified:
  +3 -3		trunk/modules/chanserv/akick.c (File Modified) 


nenolod     2007/04/02 14:26:35 UTC	(20070402-8057)
  Log:
  - update for TS tracking
  

  Changes:	Modified:
  +1 -1		trunk/modules/xmlrpc/channel.c (File Modified) 


nenolod     2007/04/02 14:24:13 UTC	(20070402-8055)
  Log:
  - fix typo
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/flags.c (File Modified) 


nenolod     2007/04/02 14:15:42 UTC	(20070402-8053)
  Log:
  - this didn't get committed
  

  Changes:	Modified:
  +2 -2		trunk/include/account.h (File Modified) 


nenolod     2007/04/02 14:11:06 UTC	(20070402-8051)
  Log:
  - add tracking of last modified TS
  

  Changes:	Modified:
  +1 -0		trunk/include/account.h (File Modified) 
  +20 -9	trunk/modules/backend/flatfile.c (File Modified) 
  +2 -2		trunk/modules/chanserv/akick.c (File Modified) 
  +4 -2		trunk/modules/chanserv/flags.c (File Modified) 
  +1 -1		trunk/modules/chanserv/register.c (File Modified) 
  +2 -2		trunk/modules/chanserv/xop.c (File Modified) 
  +42 -4	trunk/src/account.c (File Modified) 


nenolod     2007/04/02 12:40:41 UTC	(20070402-8049)
  Log:
  - rewrite the logging system.
  

  Changes:	Modified:
  +51 -4	trunk/dist/example.conf (File Modified) 
  +12 -2	trunk/include/tools.h (File Modified) 