@@ -1,3 +1,13 @@
+jilles      2007/04/02 15:16:19 UTC	(20070402-8067)
+  Log:
+  Comment out gameserv modules, these are a specialty and
+  probably not for general use.
+  
+
+  Changes:	Modified:
+  +4 -4		trunk/dist/example.conf (File Modified) 
+
+
 nenolod     2007/04/02 14:41:59 UTC	(20070402-8065)
   Log:
   - modified %s -> modified %s ago
